@@ -1,24 +1,30 @@
 package auth.ms.login_server;
 
-import auth.ms.login_server.domain.AuthData;
-import auth.ms.login_server.services.external.TokenService;
-import auth.ms.login_server.utils.PasswordHashUtils;
-import auth.ms.response_utils.ResponseUtils;
-import org.eclipse.microprofile.rest.client.inject.RestClient;
-
-import auth.ms.login_server.domain.Credentials;
-import auth.ms.login_server.domain.User;
-import auth.ms.login_server.services.external.CredentialsStoreService;
+import java.util.Set;
 
 import javax.inject.Inject;
-import javax.ws.rs.*;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.CookieParam;
+import javax.ws.rs.GET;
+import javax.ws.rs.HeaderParam;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 
-import static auth.ms.server_timings.filter.AbstractServerTimingResponseFilter.SERVER_TIMING_HEADER_NAME;
+import org.eclipse.microprofile.rest.client.inject.RestClient;
 
-import java.util.Collections;
+import auth.ms.login_server.domain.AuthData;
+import auth.ms.login_server.domain.Credentials;
+import auth.ms.login_server.domain.User;
+import auth.ms.login_server.services.external.CredentialsStoreService;
+import auth.ms.login_server.services.external.TokenService;
+import auth.ms.login_server.utils.PasswordHashUtils;
+import auth.ms.response_utils.ResponseUtils;
+import static auth.ms.server_timings.filter.AbstractServerTimingResponseFilter.SERVER_TIMING_HEADER_NAME;
 
 @Path("/auth")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -61,7 +67,42 @@ public class AuthResource {
         var id = Long.parseLong(idString);
 
         // retrieve token
-        var user = new User(id, Collections.emptySet());
+        var user = new User(id, Set.of("ROLE_USER"));
+        var tokenResponse = tokenService.forUser(user);
+
+        if (tokenResponse.getStatusInfo().getFamily() != Status.Family.SUCCESSFUL) {
+            return ResponseUtils.fromResponse(tokenResponse,
+                    tokenResponse.getStatusInfo().toEnum());
+        }
+
+        return ResponseUtils.fromResponse(tokenResponse, Status.OK, timingCredentials);
+    }
+
+    @POST
+    @Path("/registeradmin")
+    @Produces(MediaType.TEXT_PLAIN)
+    public Response registeradmin(@QueryParam("no-login") boolean noLogin, Credentials credentials) {
+        if (credentials == null) {
+            return ResponseUtils.textResponse(Status.BAD_REQUEST, "body has to be non-null");
+        }
+
+        var hashedSecret = PasswordHashUtils.bcryptHash(credentials.secret);
+        var idResponse = credentialsStoreService.storeCredentials(
+                new Credentials(credentials.username, hashedSecret));
+        var timingCredentials = idResponse.getHeaderString(SERVER_TIMING_HEADER_NAME);
+
+        if (idResponse.getStatusInfo().getFamily() != Status.Family.SUCCESSFUL) {
+            return ResponseUtils.fromResponse(idResponse, idResponse.getStatusInfo().toEnum());
+        }
+
+        if (noLogin) {
+            return ResponseUtils.fromResponse(idResponse, Status.OK);
+        }
+        var idString = idResponse.readEntity(String.class);
+        var id = Long.parseLong(idString);
+
+        // retrieve token
+        var user = new User(id, Set.of("ROLE_ADMIN"));
         var tokenResponse = tokenService.forUser(user);
 
         if (tokenResponse.getStatusInfo().getFamily() != Status.Family.SUCCESSFUL) {
@@ -114,9 +155,24 @@ public class AuthResource {
 
     @POST
     @Path("/refresh")
-    @Produces(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)    
     public Response refresh(@CookieParam("r_token") String jwtCookie) {
         return tokenService.fromRefreshToken(jwtCookie);
+    }
+
+
+    @GET
+    @Path("/verify")
+    @Produces(MediaType.TEXT_PLAIN)   
+    public Response verify(@HeaderParam("Authorization") String jwtCookie) {         
+            return tokenService.verifyToken(jwtCookie);             
+    }
+
+    @GET
+    @Path("/expiredTokens")
+    @Produces(MediaType.TEXT_PLAIN)   
+    public Response deleteExpiredTokens() {        
+            return tokenService.deleteExpiredTokens();                           
     }
 
     private static void delayResponse() {
